--- a/mantatrust_mantaclassification_train.ipynb
+++ b/mantatrust_mantaclassification_train.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -11,9 +12,51 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title set here input parameters\n",
+        "dataset_link='1urs0XvHI5AchrmBoNC0ngpTSg8ZBtgIE' #link of dataset file on gdrive\n",
+        "dataset_filename='dataset_manta_cls4'\n",
+        "model_link='1X3jfGehuOEfyBeD32bDmIljTKjKCK1YG'   #link of model on gdrive"
+      ],
+      "metadata": {
+        "id": "0uzwEmJ3K_zt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title download train dataset\n",
+        "dataset_filename_zip=dataset_filename+'.zip'\n",
+        "!gdown {dataset_link}\n",
+        "!unzip -q {dataset_filename_zip}\n",
+        "!rm {dataset_filename_zip}"
+      ],
+      "metadata": {
+        "id": "nTHYgk5OCKzq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title download last model to be improved with new training\n",
+        "!gdown {model_link} -O manta-cls.pt"
+      ],
+      "metadata": {
+        "id": "FF-ro822JtLf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -28,21 +71,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title download train dataset\n",
-        "!gdown 1n431PCOY8RXZebY-cSnNycvAvCC4DfWK\n",
-        "!unzip dataset_manta_cls3.zip"
-      ],
-      "metadata": {
-        "id": "nTHYgk5OCKzq"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "from ultralytics import YOLO\n",
-        "model = YOLO(\"yolo11n-cls.pt\")\n"
+        "model = YOLO(\"manta-cls.pt\")\n"
       ],
       "metadata": {
         "id": "gngb9mEtCTBv"
@@ -53,7 +83,7 @@
     {
       "cell_type": "code",
       "source": [
-        "results = model.train(data=\"/content/dataset_manta_cls3\", epochs=100, imgsz=640,multi_scale=True,patience=10,degrees=0.5,flipud=0.5)"
+        "results = model.train(data=dataset_filename, epochs=100, imgsz=640,multi_scale=True,patience=10)"
       ],
       "metadata": {
         "id": "BtSC7ZGcCbrh"
